crates/data-dict/tests/snapshots/validate_spec__s07_range_type_missing_range.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: table
    columns:
      - name: weight
        type: number(quantity)
      - name: recorded_at
        type: date
────────────────────────────────────────
error[S07]: A `number(quantity)` column must describe its bounds with `range`.
  --> dict.yaml:7:15
   |
LL |   - name: table
LL |     columns:
LL |       - name: weight
LL |         type: number(quantity)
   |               ^^^^^^^^^^^^^^^^ has type `number(quantity)` but is missing `range`
error[S07]: A `date` column must describe its bounds with `range`.
  --> dict.yaml:9:15
   |
LL |   - name: table
...
LL |       - name: recorded_at
LL |         type: date
   |               ^^^^ has type `date` but is missing `range`
